Final follow-up on my part on NAS-1895. A lot of javadoc added, tabs removed (some from my own hand), checkstyle, cleanup.